packages/isar_plus_generator/test/errors/class/private.dart
// must be public

import 'package:isar_plus/isar.dart';

@collection
// ignore: unused_element - private class used for testing error handling
class _Model {
  Id? id;
}
